<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">LocationReminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_welcome_message">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="reminders_fragment_title">Reminders</string>
    <string name="fab_reminders_description">Button to add a new reminder</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Log out</string>
    <string name="add_reminder_fragment_title">Add Reminder</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="fab_add_reminder_description">Save the location reminder</string>
    <string name="location">Location</string>
    <string name="image_map_description">Search in the map</string>
    <string name="successfully_saved">Successfully saved!</string>
    <string name="error_inputs_empty">Fill in all fields</string>
    <string name="message_list_reminders_empty">It looks like it\'s empty. Add yout first reminder by pressing the top left button</string>
    <string name="image_list_reminders_empty_description">Your list reminders are empty</string>
    <string name="details_reminder_fragment_title">Details</string>
    <string name="delete_description">Delete the current reminder</string>
    <string name="delete">Delete</string>
    <string name="message_reminder_delete">Reminder delete successfully!</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="maps_fragment_title">Google Maps</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="search_in_the_map">Click here to search Google Maps</string>
    <string name="title_activity_main">MainActivity</string>

    <!--    Permissions Strings-->
    <string name="permission_rationale">Location permission needed for core functionality of the game.
    </string>

    <string name="permission_denied_explanation">
        You need to grant location permission to remind your locations.
    </string>
    <string name="location_setting_off">Please turn on device location in Settings and try again.
    </string>

    <!--    Geofence Status Strings-->
    <string name="geofences_added">Clue Geofence added.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_entered">Geofence entered.</string>
    <string name="geofence_over">You have found the treasure! Congratulations!</string>

    <!-- Geofence Hints -->
    <string name="not_started_hint"></string>
    <string name="golden_gate_bridge_hint">Go to a bridge with a name that does not match the color that it is!</string>
    <string name="ferry_building_hint">Go to a market with an amazing assortment of delicious foods. It is a San Francisco classic!</string>
    <string name="pier_39_hint">Go to a pier popular for tourist attractions, carnival games, fresh fish, and delicious sourdough bread!</string>
    <string name="union_square_hint">Go to a square named after Civil War rallies held there, but now known for its amazing shopping!</string>

    <!-- Geofence Locations -->
    <string name="golden_gate_bridge_location">at the Golden Gate bridge</string>
    <string name="ferry_building_location">in the Ferry Building</string>
    <string name="pier_39_location">at Pier 39</string>
    <string name="union_square_location">in Union Square</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="location_required_error">Location services must be enabled for use the map.</string>

    <string name="geofences_not_removed">Geofences not removed.</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="geofence_error">There was an error in finding your treasure</string>

    <!-- Notification Strings-->
    <string name="channel_name">GeofenceStatus</string>
    <string name="content_text">You found a clue <xliff:g id="geofence_location">%1$s</xliff:g>.</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="settings">Settings</string>
    <string name="you_are_here">You are here</string>
    <string name="save">Save</string>

</resources>