<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="reminderViewModel"
            type="com.example.android.locationreminder.presentation.reminder.ReminderViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/parent_listReminders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.reminder.list.ListRemindersFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topAppBar_reminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_reminders"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/top_app_bar_reminders"
                app:title="@string/reminders_fragment_title"
                app:titleMarginStart="@dimen/_60sdp" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_reminders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingStart="@dimen/_64sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            app:items="@{reminderViewModel.reminders}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/list_item_reminder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp"
            android:visibility="@{reminderViewModel.empty ? View.VISIBLE : View.GONE}"
            app:layout_anchor="@id/recycler_reminders"
            app:layout_anchorGravity="center"
            tools:ignore="UseCompoundDrawables"
            tools:visibility="invisible">

            <ImageView
                android:layout_width="@dimen/_56sdp"
                android:layout_height="@dimen/_56sdp"
                android:contentDescription="@string/image_list_reminders_empty_description"
                android:src="@drawable/ic_error_outline" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/message_list_reminders_empty"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody1" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="@dimen/_16sdp"
            android:contentDescription="@string/fab_reminders_description"
            android:onClick="@{() -> reminderViewModel.onAddReminderClick()}"
            android:src="@drawable/ic_add_location"
            app:fabSize="mini"
            app:layout_anchor="@id/toolbar_reminders"
            app:layout_anchorGravity="start|center" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>